# lab6_sem3

./: CMakeLists.txt  README.md  create_db.sql  insert_data.sql  main.cpp
